# samambaia-api

./: .env.sample  .env.test  .gitignore  .test.env  Cargo.toml  changelog.md  cli.ps1  cli.sh  client.http  compose.yaml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  readme.md  run_tests.ps1  rust-toolchain.toml  rustfmt.toml  squarecloud.app  start.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yaml  formatting.yaml  linting.yaml  pipeline.yaml  tests.yaml
cli/: Cargo.toml  readme.md
cli/src/: error.rs  main.rs
cli/src/generators/: controllers.rs  mod.rs  repository.rs  service.rs
cli/src/helpers/: extract_dir_flag.rs  generate_names.rs  get_capitalized_name.rs  mod.rs  resolve_dir_path.rs  save_artifact.rs
cli/src/templates/: controller.rs  mod.rs  repository_flat.rs  scaffold_repository.rs  service.rs
entities/: Cargo.toml
entities/src/: announcement.rs  article.rs  article_tag.rs  comment.rs  comment_article.rs  comment_report.rs  free_badge.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  team_role.rs  team_role_team_user.rs  team_user.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240114_032712_add_roles_to_user.rs  m20240125_212235_add_new_fields_to_articles.rs  m20240128_044449_make_article_content_not_nullable.rs  m20240128_070407_add_approved_field_to_article.rs  m20240204_210351_add_slug_to_article.rs  m20240209_010037_setup_comments_table.rs  m20240212_051303_drop_comment_article_table.rs  m20240212_051315_add_article_id_field_to_comment_table.rs  m20240213_214959_create_comment_report_table.rs  m20240214_030642_fix_comment_report_foreign_key.rs  m20240216_194500_add_is_active_to_comments.rs  m20240216_200245_remove_cascade_action_from_comment_article_foreign_key.rs  m20240216_204934_make_comment_article_id_field_nullable.rs  m20240217_210055_setup_teams_tables.rs  m20240217_212548_add_timestamp_to_team_tables.rs  m20240307_142155_change_comment_report_solved_field_to_be_solved_by.rs  m20240316_042435_drop_team_role_team_user_relation_table.rs  m20240316_042712_alter_team_user_table.rs  m20240604_054455_make_article_slug_a_unique_key.rs  m20240719_034959_create_article_tag_table_and_add_tag_to_article.rs  m20240722_224100_remove_unique_constraint_from_team_user_field.rs  m20240725_022019_create_free_badges_table.rs  m20240726_175757_rename_user_role_enum_writter_property_to_writer.rs  m20241124_033241_add_adsense_table.rs  m20241124_154522_add_extra_fields_to_announcement_table.rs  m20250114_045251_add_description_field_to_articles.rs
src/: .bashrc  cli.ps1  env_config.rs  error.rs  lib.rs  main.rs  readme.md  server.rs
src/configs/: app.rs  env.rs  file_sessions.rs  inertia.rs  mod.rs  vite.rs
src/core/: mod.rs  nickname_regex.rs  pagination.rs
src/domain/: mod.rs
src/domain/cryptography/: both.rs  comparer.rs  hasher.rs  mod.rs
src/domain/domain_entities/: announcement.rs  article.rs  article_tag.rs  comment.rs  comment_report.rs  comment_with_author.rs  free_badge.rs  home_article.rs  mod.rs  role.rs  slug.rs  team_role.rs  team_user.rs  user.rs
src/domain/factories/: authenticate_user_service_factory.rs  change_password_service_factory.rs  comment_on_article_service_factory.rs  mod.rs  (+34 more)
src/env_config/: mod.rs
src/errors/: bad_request_error.rs  database_error.rs  enum_coercion_error.rs  error.rs  internal_error.rs  invalid_credentials_error.rs  mod.rs  resource_not_found.rs  unauthorized_error.rs  user_already_exists_error.rs
src/factories/: authenticate_user_service_factory.rs  change_password_service_factory.rs  create_user_service_factory.rs  mod.rs  update_user_service_factory.rs
src/infra/: mod.rs
src/libs/: custom_validators.rs  mod.rs  time.rs
src/repositories/: article_repository.rs  mod.rs  user_repository.rs
src/services/: authenticate_user_service.rs  change_password_service.rs  create_user_service.rs  mod.rs  update_user_service.rs
src/tests/: mod.rs
src/util/: error_response_factory.rs  get_user_role_permissions.rs  mod.rs  service_internal_error_factory.rs  verify_user_role_has_permission.rs  verify_user_role_hierarchy.rs
test/: Cargo.toml
tests/: Cargo.toml
www/: app.css  app.scss  app.tsx  inertiaShared.ts  inertiaShared.tsx  root.hbs  root.html  ssr.tsx
www/components/: alert.tsx  article-card.tsx  articleCard.tsx  badge-card.tsx  badgeCard.tsx  droppable-arrow.tsx  droppableIndicator.tsx  head.tsx  sprite.tsx
www/config/: app.ts
www/hooks/: useCanSee.ts
www/lib/: inertia.tsx  tailwind.ts
www/pages/: Error.tsx  Foo.tsx  Index.tsx  error.tsx  index.tsx
www/styles/: admin.scss  app.scss  public.scss
www/types/: announcement.ts  article.ts  auth.ts  featured-users.ts  free-badge.ts  pagination.ts  user.ts
www/utils/: can.ts  imager.ts
(+305 files in other folders)
