[package]
name = "hubbitos_backend"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entities", "cli", "tests"]

[workspace.dependencies]
actix-web = "4.7.0"
actix-web-lab = "0.20.2"
dotenvy = "0.15.7"
once_cell = "1.19.0"
log = "0.4.20"
env_logger = "0.11.1"

[features]
end-to-end-test = []

[dependencies]
migration = { path = "migration" }
entities = { path = "entities" }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono", "with-json", "with-uuid" ] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.195"
serde_json = "1.0"
serde-envfile = "0.1.0"
uuid = {version = "1.6.1", features = ["v4"]}
chrono = {version = "0.4.31", features = ["clock"]}
config = "0.13.4"
validator = { version = "0.15", features = ["derive"] }
jsonwebtoken = "9.2.0"
http = "1.0.0"
scrypt = "0.11.0"
password-auth = "1.0.0"
cargo-watch = "8.5.2"
async-trait = "0.1.77"
regex = "1.10.3"
unicode-normalization = "0.1.22"
duplicate = "1.0.0"
actix-web.workspace = true
actix-web-lab.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
mockall = "0.12.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html