[package]
name = "hubbitos_backend"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.4.0"
edition = "2021"

[workspace]
members = [".", "migration", "entities", "cli", "tests"]

[workspace.dependencies]
actix-web = "4.9.0"
actix-web-lab = "0.22.0"
dotenvy = "0.15.7"
once_cell = "1.19.0"
log = "0.4.20"
env_logger = "0.11.1"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono", "with-json", "with-uuid" ] }
serde = "1.0.208"

[features]
end-to-end-test = []

[dependencies]
migration = { path = "migration" }
entities = { path = "entities" }
tokio = { version = "1.39.3", features = ["full"] }
serde_json = "1.0"
serde-envfile = "0.1.0"
uuid = {version = "1.6.1", features = ["v4"]}
chrono = {version = "0.4.31", features = ["clock"]}
config = "0.14.0"
validator = { version = "0.18.1", features = ["derive"] }
jsonwebtoken = "9.3.0"
http = "1.1.0"
scrypt = "0.11.0"
password-auth = "1.0.0"
cargo-watch = "8.5.2"
async-trait = "0.1.81"
regex = "1.10.6"
unicode-normalization = "0.1.23"
duplicate = "1.0.0"
actix-web.workspace = true
actix-web-lab.workspace = true
sea-orm.workspace = true
serde.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
log.workspace = true
env_logger.workspace = true
either = "1.13.0"

[dev-dependencies]
mockall = "0.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html