[package]
name = "samambaia"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace]
members = [".", "migration", "entities", "cli", "tests"]

[workspace.dependencies]
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
dotenvy = "0.15.7"
log = "0.4"
env_logger = "0.11.1"
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono", "with-json", "with-uuid" ] }
serde = "1.0"

[features]
end-to-end-test = []

[dependencies]
migration = { path = "migration" }
entities = { path = "entities" }
tokio = { version = "1.42", features = ["full"] }
serde_json = "1.0"
serde-envfile = "0.1.0"
uuid = {version = "1.11", features = ["v4"]}
chrono = {version = "0.4", features = ["clock"]}
config = "0.15.4"
validator = { version = "0.19", features = ["derive"] }
jsonwebtoken = "9.3.0"
http = "1.2.0"
password-auth = "1.0.0"
async-trait = "0.1.83"
regex = "1.11.1"
unicode-normalization = "0.1.24"
duplicate = "2.0.0"
actix-web.workspace = true
actix-web-lab.workspace = true
sea-orm.workspace = true
serde.workspace = true
dotenvy.workspace = true
log.workspace = true
env_logger.workspace = true
inertia-rust = { version = "2.2", features = ["actix", "vite-template-resolver"] }
vite-rust = "0.2.2"
actix-files = "0.6.6"

[dev-dependencies]
mockall = "0.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html