[package]
name = "tests"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
dotenvy.workspace = true
rand = {version = "0.8.5", default-features = false, features = ["small_rng"]}
log.workspace = true
env_logger.workspace = true

[dependencies.samambaia]
path = "../"

[dev-dependencies]
mockall = "0.12.1"
